# tinterm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  commit.yml  format.yml  release.yml  test.yml  test_release.yml  tests.yml
demo/: demo.py
src/tinterm/: attributes.py  render.py  styled.py
termtint/: attributes.py  render.py  styled.py
tests/: test_attributes.py  test_render.py  test_styled.py
