[build-system]
requires = ["setuptools<68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinterm"
version = "0.1.0"
description = "A lightweight Python library for coloring terminal output with zero dependencies."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Tobias Hafner" }
]
requires-python = ">=3.9"
dependencies = [
  "colorama; platform_system == 'Windows'"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache 2.0",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TobiasHafner/tinterm"

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

